<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:orientation="vertical" >

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            layout="@layout/topbar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/Signup_content"
            android:textColor="@color/signinfnt_color"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_fbook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rectangle_fbook"
            android:padding="20dp"
            android:text="@string/facbook"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_twitter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/twit_rectangle"
            android:padding="20dp"
            android:text="@string/twiter"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_linkedin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/linkedin_rectangle"
            android:padding="20dp"
            android:text="@string/linkedin"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Signup_content1"
                android:textColor="@color/gray_1"
                android:textSize="15sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/txt_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/Signup_content2"
                android:textColor="@color/linkd_color2"
                android:textSize="17sp"
                android:textStyle="normal" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/Signup_content3"
            android:textColor="@color/gray_1"
            android:textSize="12sp"
            android:textStyle="normal"
             android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp" />

        <TextView
            android:id="@+id/terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginTop="20dp"
            android:padding="5dp"
            android:text="@string/Signup_content4"
            android:textColor="@color/linkd_color2"
            android:textSize="14sp"
            android:textStyle="normal" />
    </LinearLayout>

</ScrollView>