<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:orientation="vertical" >

        <include
            android:id="@+id/top_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            layout="@layout/topbar" />

        <TextView
            android:id="@+id/required_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/top_bar"
            android:padding="10dp"
            android:text="@string/required"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_emailid"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/required_text"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/emai_adds"
            android:inputType="textEmailAddress"
            android:textColor="@color/gray_2" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_emailid"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/pwd"
            android:inputType="textPassword"
            android:textColor="@color/gray_2" />

        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_password"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/confirm_pwd"
            android:inputType="textPassword"
            android:textColor="@color/gray_2" />

        <EditText
            android:id="@+id/et_display_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_confirm_password"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/display_name"
            android:inputType="text"
            android:textColor="@color/gray_2" />

        <TextView
            android:id="@+id/optional_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_display_name"
            android:padding="10dp"
            android:text="@string/optional"
            android:textColor="@color/signinfnt_color"
            android:textSize="18sp" />

        <RelativeLayout
            android:id="@+id/layout_optional"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/optional_text" >

            <ImageView
                android:id="@+id/image_optional"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:padding="10dp"
                android:src="@drawable/avatar" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/image_optional"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/et_firstname"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:ems="10"
                    android:hint="@string/first_name"
                    android:inputType="text"
                    android:textColor="@color/gray_2" />

                <EditText
                    android:id="@+id/et_lasttname"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:ems="10"
                    android:hint="@string/last_name"
                    android:inputType="text"
                    android:textColor="@color/gray_2" />
            </LinearLayout>
        </RelativeLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_optional"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/roundrectangle_signin"
            android:padding="10dp"
            android:text="Sign Up"
            android:textColor="@color/signinfnt_color"
            android:textSize="25sp"
            android:textStyle="normal" />
    </RelativeLayout>

</ScrollView>