<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="40dp"
        android:src="@drawable/th_text" />

    <Button
        android:id="@+id/btn_newuser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/roundrectangle_fb"
        android:padding="20dp"
        android:text="@string/new_user"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="normal" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp" >

        <Button
            android:id="@+id/btn_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundrectangle_signin"
            android:paddingTop="25dp"
            android:text="@string/sign_in"
            android:textColor="@color/signinfnt_color"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="top|center_horizontal"
            android:text="@string/existing_user"
            android:textColor="@color/gray_1"
            android:textSize="15sp"
            android:textStyle="bold" />
    </FrameLayout>

</LinearLayout>