<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/top_bar_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        layout="@layout/topbar" />

    <EditText
        android:id="@+id/et_emailid_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_bar_login"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/emai_adds"
        android:inputType="textEmailAddress"
        android:textColor="@color/gray_2" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/et_pwd_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_emailid_login"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/pwd"
        android:inputType="text"
        android:textColor="@color/gray_2" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_pwd_login"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/roundrectangle_signin"
        android:padding="10dp"
        android:text="Sign In"
        android:textColor="@color/signinfnt_color"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_forgotpwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_password"
        android:textColor="@color/signinfnt_color"
        android:textSize="15sp"
        android:textStyle="normal" />

</RelativeLayout>